# openclaw-webchat-adapter

./: .device.key  .env  .env.example  ADAPTER_DESIGN_REPORT.md  API_DOCUMENTATION.md  COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  DESIGN_REPORT.md  LICENSE  README.en.md  README.md  README_2.md  README_3.md  SECURITY_AUDIT_REPORT.md  TEST_REPORT.md  UPDATED_SECURITY_AUDIT_REPORT.md  issue.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  打包流程.md
.trae/documents/: 实现聊天历史记录查询接口.md
src/: .device.key  __main__.py
src/openclaw_gateway_adapter/: __init__.py  __main__.py  config.py  env.py  exceptions.py  ws_adapter.py
src/openclaw_webchat_adapter/: config.py  exceptions.py  ws_adapter.py
src/openclaw_webchat_adapter/api/: __init__.py  client.py
tests/: test_api_client.py  test_chat_history.py  test_config_dotenv_resolution.py  test_device_signing.py  test_env_dotenv.py  test_ws_adapter_create_connected.py
