[build-system]
requires = ["hatchling>=1.18,<1.28"]
build-backend = "hatchling.build"

[project]
name = "openclaw_webchat_adapter" # 修正了 webcaht -> webchat
version = "0.0.6"
authors = [
  { name="hadage", email="tangdeyx2333@gmail.com" },
]
description = "让你的项目更加简单的嵌入openclaw"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # 增加详细分类
    "Operating System :: OS Independent",
]
# 修正 License 写法
license = {text = "MIT"}

# 添加实际需要的依赖包
dependencies = [
    "websocket-client>=1.7.0",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/tangdeyx2333-beep/openclaw-webchat-adapter"
Issues = "https://github.com/tangdeyx2333-beep/openclaw-webchat-adapter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_webchat_adapter"]